[package]
name = "rmkit"
version = "0.0.21"
edition = "2021"
homepage = "https://github.com/haobogu/rmkit"
repository = "https://github.com/haobogu/rmkit"
resolver = "2"
description = "rmkit is a toolkit set for RMK keyboard firmware"
license = "Apache-2.0"

[dependencies]
rmk-config = { version = "0.6.0" }
clap = { version = "4.5.23", features = ["derive", "string"] }
toml = "0.9.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "gzip", "stream", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
zip = "4"
futures = "0.3"
futures-util = "0.3.31"
walkdir = "2"
inquire = "0.7.5"
cargo_toml = "0.22"
cargo_metadata = "0.20"

[profile.release]
codegen-units = 1
lto = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
